[package]
name = "editor-like-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
tokio = { version = "1.19", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
lsp-types = "0.93"
url = "2.2.2"
bytes = "1.1.0"
rand = "0.8.5"
log = "0.4"
simplelog = "0.12"

[dev-dependencies]